moved stuff around again, fix nasty blink when header collapsing

--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -1,6 +1,3 @@
-.site-header {
-    
-    .external {
-        background: #0E1124;   
-    }
+.site-header .external {
+    background: #0E1124;   
 }
